--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,45 @@
-node_modules
-node_modules
+# Dependencies
+node_modules/
+.pnp/
+.pnp.js
+
+# Testing
+coverage/
+
+# Production
+build/
+dist/
+out/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Prisma
+/prisma/migrations/
+/prisma/dev.db
+
+# TypeScript
+*.tsbuildinfo
+
+# Cache
+.cache/
+.temp/
