--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,55 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "planificador-nova",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.6.0",
-    "@supabase/ssr": "^0.6.1",
+    "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@types/d3": "^7.4.3",
+    "@types/node": "^20.11.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.17",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "d3": "^7.9.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "^15.3.1"
+    "next": "^15.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.1",
+    "@types/next": "^8.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "nodemon": "^3.1.9",
-    "prisma": "^6.6.0"
+    "postcss": "^8.4.35",
+    "prisma": "^6.6.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.0"
   }
 }
